--- a/webclient/package.json
+++ b/webclient/package.json
@@ -21,13 +21,16 @@
   "devDependencies": {
     "@types/node": "^22.13.4",
     "@types/react": "^18.2.66",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "chart.js": "^4.4.8",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react-chartjs-2": "^5.3.0",
     "sass": "^1.85.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
