--- a/webserver/package.json
+++ b/webserver/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "exec": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "@types/ws": "^8.5.14",
     "express": "^4.21.2",
     "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
     "ws": "^8.18.1",
     "yarn": "^1.22.22"
   },
