--- a/webserver/package.json
+++ b/webserver/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "exec": "ts-node src/index.ts"
+    "start": "tsx src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "@types/node": "^22.13.4"
+    "@types/node": "^22.13.4",
+    "tsx": "^4.19.3"
   }
 }
