--- a/webserver/package.json
+++ b/webserver/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "dev": "tsx src/dev.ts"
   },
   "author": "",
   "license": "ISC",
